# webauthn-halo2

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain
contracts/: README.md  foundry.toml
contracts/broadcast/DeployAccountFactory.s.sol/84531/: run-1692491824.json  run-1692491831.json  run-1692492058.json  run-1692492065.json
contracts/script/: DeployAccountFactory.s.sol
contracts/src/: P256Account.sol  P256AccountFactory.sol  P256Verifier.sol  SimpleAccount.sol  SimpleAccountFactory.sol  SocialRecoveryAccount.sol  SponsorPaymaster.sol
contracts/src/NFTGame/: Pool.sol  PriceOracle.sol  RandomNumberGenerator.sol
contracts/src/NFTGame/interfaces/: IPool.sol
contracts/src/RichardsGame/: Pool.sol
contracts/src/callback/: TokenCallbackHandler.sol
contracts/src/core/: BasePaymaster.sol  EntryPoint.sol
contracts/src/erc-4337/: SimpleAccount.sol
contracts/src/interfaces/: ISimpleAccount.sol  UserOperation.sol
contracts/src/verifier/: IVerifier.sol  Verifier.sol
contracts/test/: NFTGame.t.sol  P256Account.t.sol  SponsorPaymaster.t.sol  TestERC20.sol  TestERC721.sol
halo2-circuits/: Cargo.toml
halo2-circuits/src/: lib.rs
halo2-circuits/src/configs/: bench_ecdsa.config
halo2-circuits/src/data/: ecdsa_circuit_proof_11_291_53_4_10_88_3.data  ecdsa_circuit_proof_12_139_24_2_11_88_3.data  ecdsa_circuit_proof_13_68_12_1_12_88_3.data  ecdsa_circuit_proof_14_34_6_1_13_91_3.data  ecdsa_circuit_proof_15_17_3_1_14_90_3.data  ecdsa_circuit_proof_16_8_2_1_15_90_3.data  ecdsa_circuit_proof_17_4_1_1_16_88_3.data  ecdsa_circuit_proof_18_2_1_1_17_88_3.data  ecdsa_circuit_proof_19_1_1_1_18_88_3.data
halo2-circuits/src/ecc/: ecdsa_p256.rs  es256.rs  mod.rs
halo2-circuits/src/results/: ecdsa_bench.csv  ecdsa_bench_secp256r1.csv
proving-server/: Cargo.toml  P256Verifier.code  P256Verifier.sol  P256Verifier.yul
proving-server/keys/: README.md
proving-server/src/: main.rs
src/data/: ecdsa_circuit_proof_12_139_24_2_11_88_3.data  ecdsa_circuit_proof_18_2_1_1_17_88_3.data  ecdsa_circuit_proof_19_1_1_1_18_88_3.data
src/tests/: ecdsa_p256.rs  es256.rs  mod.rs
web-demo/: .vercelignore  hi.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
web-demo/src/pages/: index.tsx  sdk.tsx
web-demo/src/styles/: globals.css
zk-passkey-sdk/: Chain.ts  Passkey.ts  README.md  ZKPasskeyManager.ts  index.ts  package.json  tsconfig.json  utils.ts
zk-passkey-sdk/src/: Passkey.ts  ZKPasskeyManager.ts  utils.ts
(+5 files in other folders)
